--- a/style.css
+++ b/style.css
@@ -123,6 +123,10 @@ label {
 .mods table, th, td{
 	border: 1px solid black;
 }
+.mods tr td:first-child{
+	width: 1%;
+	white-space: nowrap;
+}
 .mods tr td:last-child{
 	width: 1%;
 	white-space: nowrap;
@@ -141,7 +145,7 @@ input:not([type=submit]) {
 	box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.1), 
 				0px 1px 0px 0px rgba(250, 250, 250, 0.5) ;
 }
-input[type=submit] {
+.submit {
 	border: 1px solid rgba(0, 0, 0, 0.3);
 	background: #64c8ef; /* Old browsers */
 	background: -moz-linear-gradient(top,  #64c8ef 0%, #00a2e2 100%); /* FF3.6+ */
@@ -193,4 +197,20 @@ input[type=submit] {
 .action_buttons:active {
 	position:relative;
 	top:1px;
+}
+.add_mod_button {
+	border: 1px solid rgba(0, 0, 0, 0.3);
+	background: #64c8ef; /* Old browsers */
+	background: -moz-linear-gradient(top,  #64c8ef 0%, #00a2e2 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#64c8ef), color-stop(100%,#00a2e2)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #64c8ef 0%,#00a2e2 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#64c8ef', endColorstr='#00a2e2',GradientType=0 ); /* IE6-9 */
+	color: #fff;
+	padding: 5px 15px;
+	margin: 0;
+	border-radius: 3px;
+	text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.3);
 }
