--- a/style.css
+++ b/style.css
@@ -214,3 +214,24 @@ input:not([type=submit]) {
 	border-radius: 3px;
 	text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.3);
 }
+footer{
+	width:720px;
+	height: 100px;
+	margin: auto;
+	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-moz-border-radius: 15px;
+	-webkit-border-radius: 15px;
+	background-color: rgba(250,250,250,0.5);
+	display:table;
+}
+footer a{
+	padding-top: 10px;
+	padding : 0px;
+	margin : auto;
+	line-height: 10px;
+	text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+	display:table-cell;
+	vertical-align: middle;
+	text-align: center;
+}
